--- a/app/views/layouts/base.twig
+++ b/app/views/layouts/base.twig
@@ -2,16 +2,45 @@
 <html>
     <head>
         {% block head %}
-            <link rel="stylesheet" href="style.css" />
+	    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	    <link rel="stylesheet" href="/public/css/materialize.min.css" />
+            <link rel="stylesheet" href="/public/css/style.css" />
+	    {% block css %}{% endblock %}
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
             <title>{% block title %}{% endblock %} - My Webpage</title>
         {% endblock %}
     </head>
     <body>
-        <div id="content">{% block content %}{% endblock %}</div>
-        <div id="footer">
-            {% block footer %}
-                &copy; Copyright 2017 by <a href="http://domain.invalid/">me</a>.
-            {% endblock %}
-        </div>
+	<nav>
+    		<div class="nav-wrapper blue-grey darken" >
+		     	<a href="/" class="brand-logo right">T</a>
+			<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+		      <ul id="nav-mobile" class="left hide-on-med-and-down">
+		        <li class="index"><a href="/">Indice</a></li>
+		        <li class="courses"><a href="/index/courses/">Cursos</a></li>
+		        <li class="contact"><a href="/index/contact/">Contacto</a></li>
+		      </ul>
+			<ul class="side-nav" id="mobile-demo">
+				<li class="index"><a href="/">Indice</a></li>
+				<li class="courses"><a href="/index/courses/">Cursos</a></li>
+				<li class="contact"><a href="/index/contact/">Contacto</a></li>
+			</ul>
+		</div>
+	</nav>
+        <div class="container">{% block content %}{% endblock %}</div>
+        <footer class="page-footer blue-grey darken-2">
+          <div class="footer-copyright">
+            <div class="container">
+            © 2017 Copyright Text
+            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+          </div>
+        </footer>
+
+	<!--Import jQuery before materialize.js-->
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+      	<script type="text/javascript" src="/public/js/materialize.min.js"></script>
+	<script type="text/javascript" src="/public/js/main.js"></script>
+    	{% block scripts %}{% endblock %}
     </body>
 </html>
