--- a/app/views/index/courses.twig
+++ b/app/views/index/courses.twig
@@ -1,5 +1,5 @@
 {% extends "layouts/base.twig" %}
-{% block title %} Index {% endblock %}
+{% block title %} Courses {% endblock %}
 {% block content %} 
 
 Hola courses 
