--- a/app/views/layouts/base.twig
+++ b/app/views/layouts/base.twig
@@ -11,6 +11,7 @@
         {% endblock %}
     </head>
     <body>
+	<div class="navbar-fixed">
 	<nav>
     		<div class="nav-wrapper blue-grey darken" >
 		     	<a href="/" class="brand-logo right">T</a>
@@ -27,6 +28,7 @@
 			</ul>
 		</div>
 	</nav>
+	</div>
         <div class="container">{% block content %}{% endblock %}</div>
         <footer class="page-footer blue-grey darken-2">
           <div class="footer-copyright">
