--- a/app/views/layouts/base.twig
+++ b/app/views/layouts/base.twig
@@ -11,24 +11,28 @@
         {% endblock %}
     </head>
     <body>
-	<div class="navbar-fixed">
-	<nav>
-    		<div class="nav-wrapper blue-grey darken" >
-		     	<a href="/" class="brand-logo right">T</a>
-			<a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-		      <ul id="nav-mobile" class="left hide-on-med-and-down">
-		        <li class="index"><a href="/">Indice</a></li>
-		        <li class="courses"><a href="/index/courses/">Cursos</a></li>
-		        <li class="contact"><a href="/index/contact/">Contacto</a></li>
-		      </ul>
-			<ul class="side-nav" id="mobile-demo">
-				<li class="index"><a href="/">Indice</a></li>
-				<li class="courses"><a href="/index/courses/">Cursos</a></li>
-				<li class="contact"><a href="/index/contact/">Contacto</a></li>
-			</ul>
-		</div>
-	</nav>
-	</div>
+
+<div class="navbar-fixed">
+    <nav class="blue-grey darken" role="navigation">
+        <div class="nav-wrapper container">
+            <a id="logo-container" href="#" class="brand-logo">
+                <div class="logo center-block"></div>
+            </a>
+            <ul class="right hide-on-med-and-down">
+			<li class="index"><a href="/">Indice</a></li>
+                        <li class="courses"><a href="/index/courses/">Cursos</a></li>
+                        <li class="contact"><a href="/index/contact/">Contacto</a></li>            
+		</ul>
+            <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
+        </div>
+    </nav>
+</div>
+<ul id="nav-mobile" class="side-nav">
+	<li class="index"><a href="/">Indice</a></li>
+                                <li class="courses"><a href="/index/courses/">Cursos</a></li>
+                                <li class="contact"><a href="/index/contact/">Contacto</a></li>
+</ul>
+
         <div class="container">{% block content %}{% endblock %}</div>
         <footer class="page-footer blue-grey darken-2">
           <div class="footer-copyright">
