--- a/app/views/layouts/base.twig
+++ b/app/views/layouts/base.twig
@@ -1,52 +1,68 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        {% block head %}
-	    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-	    <link rel="stylesheet" href="/public/css/materialize.min.css" />
-            <link rel="stylesheet" href="/public/css/style.css" />
-	    {% block css %}{% endblock %}
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-            <title>{% block title %}{% endblock %} - My Webpage</title>
-        {% endblock %}
-    </head>
-    <body>
 
-<div class="navbar-fixed">
-    <nav class="blue-grey darken" role="navigation">
-        <div class="nav-wrapper container">
-            <a id="logo-container" href="#" class="brand-logo">
-                <div class="logo center-block"></div>
-            </a>
-            <ul class="right hide-on-med-and-down">
-			<li class="index"><a href="/">Indice</a></li>
-                        <li class="courses"><a href="/index/courses/">Cursos</a></li>
-                        <li class="contact"><a href="/index/contact/">Contacto</a></li>            
-		</ul>
-            <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-        </div>
-    </nav>
-</div>
-<ul id="nav-mobile" class="side-nav">
-	<li class="index"><a href="/">Indice</a></li>
-                                <li class="courses"><a href="/index/courses/">Cursos</a></li>
-                                <li class="contact"><a href="/index/contact/">Contacto</a></li>
-</ul>
+<head>
+    {% block head %}
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="/public/css/materialize.min.css" />
+    <link rel="stylesheet" href="/public/css/style.css" /> {% block css %}{% endblock %}
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{% block title %}{% endblock %} - My Webpage</title>
+    {% endblock %}
+</head>
 
-        <div class="container">{% block content %}{% endblock %}</div>
-        <footer class="page-footer blue-grey darken-2">
-          <div class="footer-copyright">
-            <div class="container">
-            © 2017 Copyright Text
-            <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+<body>
+
+    <div class="navbar-fixed">
+        <nav class="blue-grey darken" role="navigation">
+            <div class="nav-wrapper container">
+                <a id="logo-container" href="#" class="brand-logo">
+                    <div class="logo center-block"></div>
+                </a>
+                <ul class="right hide-on-med-and-down">
+                    <li class="index">
+                        <a href="/">Indice</a>
+                    </li>
+                    <li class="courses">
+                        <a href="/index/courses/">Cursos</a>
+                    </li>
+                    <li class="contact">
+                        <a href="/index/contact/">Contacto</a>
+                    </li>
+                </ul>
+                <a href="#" data-activates="nav-mobile" class="button-collapse">
+                    <i class="material-icons">menu</i>
+                </a>
             </div>
-          </div>
-        </footer>
+        </nav>
+    </div>
+    <ul id="nav-mobile" class="side-nav">
+        <li class="index">
+            <a href="/">Indice</a>
+        </li>
+        <li class="courses">
+            <a href="/index/courses/">Cursos</a>
+        </li>
+        <li class="contact">
+            <a href="/index/contact/">Contacto</a>
+        </li>
+    </ul>
 
-	<!--Import jQuery before materialize.js-->
-	<script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-      	<script type="text/javascript" src="/public/js/materialize.min.js"></script>
-	<script type="text/javascript" src="/public/js/main.js"></script>
-    	{% block scripts %}{% endblock %}
-    </body>
+    <div class="container">{% block content %}{% endblock %}</div>
+    <footer class="page-footer blue-grey darken-2">
+        <div class="footer-copyright">
+            <div class="container">
+                © 2017 Copyright Text
+                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+        </div>
+    </footer>
+
+    <!--Import jQuery before materialize.js-->
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="/public/js/materialize.min.js"></script>
+    <script type="text/javascript" src="/public/js/main.js"></script>
+    {% block scripts %}{% endblock %}
+</body>
+
 </html>
